# GemEngine

./: .gitignore  Build.lua  CMakeLists.txt  GemEngine.sln  LICENSE  README.md
Engine/: Engine.vcxproj  Engine.vcxproj.filters  Source.cpp
Engine/GemCore/src/: GLFW_Manager.cpp  GemEngine.cpp  gemClock.cpp  gemLogger.cpp  gemScopedTimer.cpp  gemTimer.cpp
Engine/GemInput/src/: GemInputs.cpp  GemKey.cpp
Engine/GemWindow/src/: gemWindow.cpp
Engine/src/: main.cpp
Engine/src/Core/: instance.h  logger.h
Engine/src/Core/src/: instance.cpp  logger.cpp
Engine/src/Inputs/: eventManager.h  inputs.h  key.h
Engine/src/Inputs/src/: eventManager.cpp  inputs.cpp  key.cpp
Engine/src/Time/: clock.h  scoped_timer.h  timer.h
Engine/src/Time/src/: clock.cpp  scoped_timer.cpp  timer.cpp
Engine/src/Window/: window.h
Engine/src/Window/src/: window.cpp
GemEngine/: Build-Engine.lua
GemEngine/Assets/Shaders/: triangle.vert
GemEngine/GemCore/include-protected/: GLFW_Manager.h  function_overload.h
GemEngine/GemCore/src/: GLFW_Manager.cpp  GemEngine.cpp  function_overload.cpp  gemClock.cpp  gemLogger.cpp  gemScopedTimer.cpp  gemTimer.cpp
GemEngine/GemGraphics/src/: camera.cpp
GemEngine/GemInput/src/: GemInputs.cpp  GemKey.cpp
GemEngine/GemWindow/include-protected/: Inputs.h
GemEngine/GemWindow/src/: GemInputs.cpp  GemKey.cpp  gemWindow.cpp
GemProject/: Build-Project.lua
GemProject/Source/: Source.cpp
GemProject/src/: main.cpp  position_color.frag  position_color.vert
Setup/: Setup-Linux.sh  Setup-Windows.bat
Setup/PremakeScript/: Build.lua
(+32 files in other folders)
